--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node --esm src/server.ts"
   },
   "keywords": [],
   "author": "",
