test: backend: wrote unit tests using dependency injection while keeping the backend working properly with the help of Claude 3.7 Sonnet official website
- Updated package.json to include Jest and Supertest for testing.
- Refactored server.ts to improve OpenAI client instantiation and error handling.
- Modified tsconfig.json for better module resolution and added support for JavaScript files.
- Created unit tests for the API optimization endpoint in optimize.test.ts.
- Added setup-env.ts to configure the test environment.
- Introduced test-utils.ts for reusable mock response creation.
- Configured Jest with jest.config.mjs for TypeScript and ESM support.

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,11 +1,18 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "ESNext",
-    "moduleResolution": "Node",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "esModuleInterop": true,
     "outDir": "./dist",
-    "rootDir": "./src",
-    "strict": true
+    "rootDir": ".",
+    "strict": true,
+    "allowJs": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true
+  },
+  "include": ["src/**/*", "__tests__/**/*"],
+  "ts-node": {
+    "esm": true
   }
 }
